# aimemory

./: .gitignore  .ocamlformat  CHANGELOG.md  CONTRIBUTING.md  README.md  aimemory.opam  dune-project  release-please-config.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  ci.yml  release-please.yml
docs/: customization-guide.md  example-go-rest-api.md  requirements.md  usage-guide.md
docs/adr/: 000-template.md  001-lid-format.md  002-pending-refs.md  003-flat-entity-data.md  004-type-contracts.md  005-layered-architecture.md  006-typed-errors.md  007-pagination.md  008-mcp-stdio-transport.md
lib/: dune
lib/api/: dune  mcp_server.ml  tools.ml
lib/domain/: dune  entity.ml  lid.ml  lid.mli  protocol.ml  ref.ml
lib/engine/: dune  ingest.ml  resolver.ml
lib/storage/: dune  repo.ml  repo.mli  schema.ml
lib/support/: dune  log.ml
test/: dune  test_api.ml  test_domain.ml  test_engine.ml  test_log.ml  test_prop.ml  test_storage.ml
